k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
  labels:
    name: microservices-demo
    environment: development
